--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="trip Cracow , Cracow tour , trip Cracow Auschwitz , trip Cracow Saltmine ,trips Cracow , wycieczki Kraków , wycieczki Krakow , wycieczki Auschwitz , wycieczki Wieliczka ,  "
     />
+
+    <meta name="keywords" content="trip Cracow , Cracow tour , trip Cracow Auschwitz , trip Cracow Saltmine ,trips Cracow , wycieczki Kraków , wycieczki Krakow , wycieczki Auschwitz , wycieczki Wieliczka , "/>
+
+
+    
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
